# codeinfo-tool

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
clangxx/: CMakeLists.txt  compilation_db.h  cursor.h  cx_string.h  diagnostic.h  file.h  index.h  source_location.h  translation-unit.h  type.h
clangxx/src/: compilation_db.cpp  cursor.cpp  cx_string.cpp  diagnostic.cpp  file.cpp  index.cpp  source_location.cpp  translation-unit.cpp  type.cpp
tool/: CMakeLists.txt  compilation_db.h  cursor.h  cx_string.h  diagnostic.h  file.h  index.h  main.cpp  options.h  source_location.h  temp_file.h  translation-unit.h  type.h
tool/src/: compilation_db.cpp  cursor.cpp  cx_string.cpp  diagnostic.cpp  file.cpp  index.cpp  options.cpp  source_location.cpp  temp_file.cpp  translation-unit.cpp  type.cpp
